# gloo

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build-cuda.yml  build-linux.yml  build-rocm.yml  build-windows.yml  super-linter.yml
cmake/: Dependencies.cmake  Hip.cmake  Hipify.cmake
cmake/Modules/: Findrccl.cmake
docs/: errors.md  transport.md
gloo/: CMakeLists.txt  algorithm.cc  algorithm.h  allgather.cc  allgather_ring.h  allgatherv.cc  allreduce.cc  allreduce.h  allreduce_bcube.cc  allreduce_bcube.h  allreduce_halving_doubling.h  allreduce_local.cc  allreduce_local.h  allreduce_ring.h  allreduce_ring_chunked.h  allreduce_shm.cc  allreduce_shm.h  alltoall.cc  alltoall.h  alltoallv.cc  alltoallv.h  barrier.h  barrier_all_to_all.h  barrier_all_to_one.h  broadcast.cc  broadcast_one_to_all.h  context.cc  context.h  cuda.cu  cuda.h  cuda_allreduce_bcube.cc  cuda_allreduce_local.cc  cuda_allreduce_ring_chunked.cc  cuda_collectives_device.h  cuda_collectives_host.h  cuda_collectives_native.h  cuda_collectives_nccl.h  cuda_private.h  gather.cc  gatherv.cc  (+6 more)
gloo/benchmark/: CMakeLists.txt  cuda_main.cc  main.cc  options.cc  options.h  runner.cc
gloo/common/: CMakeLists.txt  enforce.cc  enforce.h  linux.cc  log.h  logging.cc  logging.h  memory.h  utils.cc  utils.h  win.cc
gloo/examples/: CMakeLists.txt  looks_like_mpi.cc
gloo/mpi/: context.cc
gloo/nccl/: nccl.h
gloo/rendezvous/: context.cc  file_store.cc  file_store.h  hash_store.cc  hash_store.h  prefix_store.cc  prefix_store.h  redis_store.cc  store.h
gloo/test/: CMakeLists.txt  allreduce_test.cc  base_test.cc  base_test.h  cuda_base_test.cu  linux_test.cc  main.cc  multiproc_test.h  openssl_utils.cc  remote_key_test.cc  transport_test.cc
gloo/transport/: CMakeLists.txt  address.cc  buffer.cc  buffer.h  context.cc  context.h  device.cc  pair.cc  pair.h  remote_key.h  unbound_buffer.cc  unbound_buffer.h
gloo/transport/ibverbs/: CMakeLists.txt  address.cc  buffer.cc  context.cc  context.h  device.cc  memory_region.cc  pair.cc  pair.h  remote_key.cc  remote_key.h  unbound_buffer.cc  unbound_buffer.h
gloo/transport/tcp/: CMakeLists.txt  address.cc  attr.h  buffer.cc  context.cc  context.h  debug_data.h  device.cc  helpers.cc  helpers.h  listener.cc  loop.cc  pair.cc  socket.cc  unbound_buffer.cc
gloo/transport/tcp/peel/: CHANGES.md  CMakeLists.txt  TESTING.md  build_peel_full_mesh.sh  peel_broadcast.cc  peel_broadcast.h  peel_context.cc  peel_context.h  peel_discovery.cc  peel_discovery.h  peel_full_mesh.cc  peel_full_mesh.h  peel_handshake.cc  peel_handshake.h  peel_protocol.cc  peel_protocol.h  peel_redis.cc  peel_redis.h  peel_transport.cc  peel_transport.h  peel_tree.cc  peel_tree.h  run.sh  run_host1.sh  run_host2.sh  test_peel_broadcast.cc  test_peel_broadcast_example.cc  test_peel_full_mesh.cc  test_peel_gloo_context.cc  test_tcp_broadcast.cc  test_topo.txt
gloo/transport/tcp/tls/: context.cc  pair.cc
gloo/transport/uv/: address.cc  address.h  context.cc  context.h  device.cc  device.h  libuv.h  pair.cc  pair.h  unbound_buffer.cc  unbound_buffer.h
tools/amd_build/: build_amd.py
tools/amd_build/pyHIPIFY/: constants.py  cuda_to_hip_mappings.py  hipify_python.py
